--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
                     <h1>Campaign Authoring</h1>
                 </div>
 
+                <div class="col-md-10 col-md-offset-1"id="errordiv"></div>
+
 
                 <div class="span12">
 
                     <table id="campaigntable" class="table table-striped table-hover">
                         <thead>
                             <tr>
-                                <th>Existing Campaigns</th>
+                                <th>Title</th>
                                 <th>Created</th>
                                 <th>State</th>
                                 <th>Responses</th>
