fix for get xml

--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
             </div>
         </div>
 
+
+        <form id="hiddenform" class="hidden" action = "/app/campaign/read" method="post" target="_blank">
+            <input id="hiddenurn" type="hidden" name="campaign_urn_list" value="">
+            <input type="hidden" name="output_format" value="xml">
+            <input type="hidden" name="client" value="manager">
+        </form>
+
+
         <!-- footer -->
         <div id="footer">
             <div class="container">
