--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Update Survey</title>
+        <title>Campaign Manager</title>
         <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
 
 
@@ -27,10 +27,18 @@
                 <div class="span12 page-header">
 
                     <a href="new.html" class="pull-right btn btn-primary">Create New Campaign</a>
-                    <h1>Campaign Authoring</h1>
+                    <h1>Campaign Manager</h1>
                 </div>
 
                 <div class="col-md-10 col-md-offset-1"id="errordiv"></div>
+
+                <div id="progressdiv" class="col-md-12 hidden">
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                            <span class="sr-only">60% Complete</span>
+                        </div>
+                    </div>
+                </div>
 
 
                 <div class="span12">
