--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="//cdn.datatables.net/1.10.3/css/jquery.dataTables.min.css">
 
+
         <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
         <script src="//cdn.datatables.net/1.10.3/js/jquery.dataTables.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
 
         <link href="css/app.css" rel="stylesheet" type="text/css"/>
         <script type="text/javascript" src="js/jquery-cookie.js"></script>
@@ -34,9 +36,7 @@
 
                 <div id="progressdiv" class="col-md-12 hidden">
                     <div class="progress">
-                        <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-                            <span class="sr-only">60% Complete</span>
-                        </div>
+                        <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar"></div>
                     </div>
                 </div>
 
