better progress bar animation

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                 <div id="progressdiv" class="col-md-12 hidden">
                     <div class="progress">
-                        <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar"></div>
+                        <div class="active progress-bar progress-bar-success progress-bar-striped" role="progressbar"> Retrieving Campaign Information... </div>
                     </div>
                 </div>
 
