better progress bar animation

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                 <div class="col-md-10 col-md-offset-1"id="errordiv"></div>
 
-                <div id="progressdiv" class="col-md-12 hidden">
+                <div id="progressdiv" class="col-md-12">
                     <div class="progress">
                         <div class="active progress-bar progress-bar-success progress-bar-striped" role="progressbar"> Retrieving Campaign Information... </div>
                     </div>
