--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                 <div id="progressdiv" class="col-md-12">
                     <div class="progress">
-                        <div class="active progress-bar progress-bar-success progress-bar-striped" role="progressbar"> Retrieving Campaign Information... </div>
+                        <div class="active progress-bar progress-bar-success progress-bar-striped" role="progressbar">Loading Campaigns... </div>
                     </div>
                 </div>
 
@@ -67,6 +67,24 @@
             <input type="hidden" name="output_format" value="xml">
             <input type="hidden" name="client" value="manager">
         </form>
+
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="myModalLabel">Campaign Settings</h4>
+              </div>
+              <div class="modal-body">
+                ...
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
 
 
         <!-- footer -->
