--- a/index.html
+++ b/index.html
@@ -104,17 +104,25 @@
                     </div>
                   </div>
                   <div class="form-group">
-                    <label for="campaign_author" class="col-sm-2 control-label">Authors</label>
+                    <label for="campaign_class" class="col-sm-2 control-label">Class</label>
                     <div class="col-sm-10">
-                      <select class="form-control" id="campaign_author" data-placeholder="Select author..." multiple tabindex="3">
-
-                      </select>
+                      <select class="form-control" id="campaign_class" data-placeholder="Select class..." multiple tabindex="3"></select>
                     </div>
                   </div>
+
+                  <!--
+                  <div class="form-group">
+                    <label for="campaign_author" class="col-sm-2 control-label">Authors</label>
+                    <div class="col-sm-10">
+                      <select class="form-control" id="campaign_author" data-placeholder="Select author..." multiple tabindex="3"></select>
+                    </div>
+                  </div>
+                  -->
+
                   <div class="form-group">
                     <label for="campaign_state" class="col-sm-2 control-label">State</label>
                     <div class="col-sm-5">
-                        <input id="campaign_state" type="checkbox">
+                        <input id="campaign_running" type="checkbox">
                     </div>
                     <div class="col-sm-5">
                         <input id="campaign_shared" type="checkbox">
