--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
             <div class="row">
 
                 <div class="span12 page-header">
-
-                    <a href="new.html" class="pull-right btn btn-primary">Create New Campaign</a>
+                    <!--<a href="new.html" class="pull-right btn btn-primary">Create New Campaign</a>-->
                     <h1>Campaign Manager</h1>
                 </div>
 
