--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <script type="text/javascript" src="js/bootstrap-switch.min.js"></script>
         <link rel="stylesheet" href="css/bootstrap-switch.min.css">
 
+        <!-- pretty file upload -->
+        <script type="text/javascript" src="js/jasny-bootstrap.min.js"></script>
+        <link href="css/jasny-bootstrap.min.css" rel="stylesheet">
+
         <link rel="stylesheet" href="css/app.css">
         <script type="text/javascript" src="js/jquery-cookie.js"></script>
         <script type="text/javascript" src="js/ohmage.js"></script>
@@ -35,7 +39,8 @@
             <div class="row">
 
                 <div class="span12 page-header">
-                    <!--<a href="new.html" class="pull-right btn btn-primary">Create New Campaign</a>-->
+                    <a href="new.html" class="pull-right btn btn-primary">Create New Campaign</a>
+
                     <h1>Campaign Manager</h1>
                 </div>
 
@@ -130,6 +135,20 @@
                         <input id="campaign_privacy" type="checkbox">
                     </div>
                   </div>
+
+                  <div class="form-group">
+                    <label for="campaign_class" class="col-sm-2 control-label">Survey(s)</label>
+                    <div class="col-sm-10">
+
+                      <div class="fileinput fileinput-new input-group" data-provides="fileinput">
+                        <div class="form-control" data-trigger="fileinput"><i class="glyphicon glyphicon-file fileinput-exists"></i> <span class="fileinput-filename"><i class="notsoimportant">Not required</i></span></div>
+                        <span class="input-group-addon btn btn-default btn-file"><span class="fileinput-new">Select XML File</span><span class="fileinput-exists">Change</span><input type="file" name="..."></span>
+                        <a href="#" class="input-group-addon btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
+                      </div>
+
+                    </div>
+                  </div>
+
                 </form>
               </div>
               <div class="modal-footer">
