--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     </div>
                   </div>
 
-                  <div class="form-group">
+                  <div class="xml-upload-form form-group">
                     <label for="campaign_class" class="col-sm-2 control-label">Survey(s)</label>
                     <div class="col-sm-10">
 
