--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
                       <div class="fileinput fileinput-new input-group" data-provides="fileinput">
                         <div class="form-control" data-trigger="fileinput"><i class="glyphicon glyphicon-file fileinput-exists"></i> <span class="fileinput-filename"><i class="notsoimportant">Not required</i></span></div>
-                        <span class="input-group-addon btn btn-default btn-file"><span class="fileinput-new">Select XML File</span><span class="fileinput-exists">Change</span><input type="file" name="..."></span>
+                        <span class="input-group-addon btn btn-default btn-file"><span class="fileinput-new">Select XML File</span><span class="fileinput-exists">Change</span><input class="xml-file-input" type="file" name="..."></span>
                         <a href="#" class="input-group-addon btn btn-default fileinput-exists" data-dismiss="fileinput">Remove</a>
                       </div>
 
