--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="row">
 
                 <div class="span12 page-header">
-                    <a href="new.html" class="pull-right btn btn-primary">Create New Campaign</a>
+                    <a href="new.html" id="new_campaign_button" class="pull-right btn btn-primary">Create New Campaign</a>
 
                     <h1>Campaign Manager</h1>
                 </div>
