add campaign delete button

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                 </form>
               </div>
               <div class="modal-footer">
+                <button type="button" id="campaign_delete_button" class="btn btn-danger pull-left">Delete campaign</button>
                 <button type="button" id="campaign_save_button" class="btn btn-primary">Save changes</button>
               </div>
             </div>
