--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="row">
 
                 <div class="span12 page-header">
-                    <a href="new.html" id="new_campaign_button" class="pull-right btn btn-primary">Create New Campaign</a>
+                    <a href="../surveytool" id="new_campaign_button" class="pull-right btn btn-primary">Create New Campaign</a>
 
                     <h1>Campaign Manager</h1>
                 </div>
@@ -152,8 +152,10 @@
                 </form>
               </div>
               <div class="modal-footer">
-                <button type="button" id="campaign_delete_button" class="btn btn-danger pull-left">Delete campaign</button>
-                <button type="button" id="campaign_save_button" class="btn btn-primary">Save changes</button>
+                <button type="button" id="campaign_delete_button" class="btn btn-danger pull-left">
+                  <span class="glyphicon glyphicon-remove"></span> Delete campaign</button>
+                <button type="button" id="campaign_save_button" class="btn btn-primary">
+                <span class="glyphicon glyphicon-ok"></span> Save changes</button>
               </div>
             </div>
           </div>
