change switch labels

--- a/index.html
+++ b/index.html
@@ -125,14 +125,10 @@
 
                   <div class="form-group">
 
-                    <label for="campaign_state" class="col-sm-2 control-label">Running</label>
-                    <div class="col-sm-4">
-                        <input id="campaign_running" type="checkbox">
-                    </div>
-
-                    <label for="campaign_state" class="col-sm-2 control-label">Privacy</label>
-                    <div class="col-sm-4">
-                        <input id="campaign_privacy" type="checkbox">
+                    <label for="campaign_state" class="col-sm-2 control-label">State</label>
+                    <div class="col-sm-10">
+                      <input id="campaign_running" type="checkbox">
+                      <input id="campaign_privacy" type="checkbox">
                     </div>
                   </div>
 
