--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
                 <div class="span12 page-header">
                     <a href="../surveytool" id="new_campaign_button" class="pull-right btn btn-primary">Create New Campaign</a>
 
-                    <h1>Campaign Manager</h1>
+                    <!--
+                      <h1>Campaign Manager</h1>
+                    -->
+                    <h1>Campaign Authoring: Management</h1>
                 </div>
 
                 <div class="col-md-10 col-md-offset-1" id="errordiv"></div>
