--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <!--
                       <h1>Campaign Manager</h1>
                     -->
-                    <h1>Campaign Authoring: Management</h1>
+                    <h1>Campaign Authoring: Manager</h1>
                 </div>
 
                 <div class="col-md-10 col-md-offset-1" id="errordiv"></div>
