change wording to be consistent with surveytool

--- a/index.html
+++ b/index.html
@@ -129,11 +129,17 @@
                   <div class="form-group">
 
                     <label for="campaign_state" class="col-sm-2 control-label">State</label>
-                    <div class="col-sm-10">
+                    <div class="col-sm-4">
                       <input id="campaign_running" type="checkbox">
+                    </div>
+ 
+
+                    <label for="campaign_state" class="col-sm-2 control-label">Sharing</label>
+                    <div class="col-sm-4">
                       <input id="campaign_privacy" type="checkbox">
                     </div>
                   </div>
+
 
                   <div class="xml-upload-form form-group">
                     <label for="campaign_class" class="col-sm-2 control-label">Survey(s)</label>
