--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <th></th>
                                 <th>Title</th>
                                 <th>Created</th>
-                                <th>State</th>
+                                <th>Status</th>
                                 <th>Responses</th>
                             </tr>
                         </thead>
@@ -128,7 +128,7 @@
 
                   <div class="form-group">
 
-                    <label for="campaign_state" class="col-sm-2 control-label">State</label>
+                    <label for="campaign_state" class="col-sm-2 control-label">Status</label>
                     <div class="col-sm-4">
                       <input id="campaign_running" type="checkbox">
                     </div>
