--- a/index.html
+++ b/index.html
@@ -58,14 +58,13 @@
 
                 <div class="span12">
 
-                    <table id="campaigntable" class="table table-striped table-hover">
+                    <table id="campaigntable" class="table">
                         <thead>
-                            <tr>
-                                <th></th>
                                 <th>Title</th>
                                 <th>Created</th>
                                 <th>Status</th>
                                 <th>Responses</th>
+                                <th></th>
                             </tr>
                         </thead>
 
