--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <script type="text/javascript" src="js/jasny-bootstrap.min.js"></script>
         <link href="css/jasny-bootstrap.min.css" rel="stylesheet">
 
+        <link rel="stylesheet" href="css/bootstrap-datepicker3.min.css">
+        <script type="text/javascript" src="js/bootstrap-datepicker.min.js"></script>
+
         <link rel="stylesheet" href="css/app.css">
         <script type="text/javascript" src="js/jquery-cookie.js"></script>
         <script type="text/javascript" src="js/ohmage.js"></script>
@@ -57,6 +60,20 @@
 
 
                 <div class="span12">
+
+                    <div class="pull-right">
+                        <form class="form-inline">
+                            <div class="form-group">
+                                <label for="exampleInputName2">From: </label>
+                                <input class="form-control datepicker" id="mindate">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail2">To: </label>
+                                <input class="form-control datepicker" id="maxdate">
+                            </div>
+                            <!--<button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-refresh"></span> Reload</button>-->
+                        </form>            
+                    </div>                    
 
                     <table id="campaigntable" class="table">
                         <thead>
