--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
         <title>Campaign Manager</title>
         <meta http-equiv="content-type" content="text/html;charset=UTF-8"/>
 
-
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="//cdn.datatables.net/1.10.3/css/jquery.dataTables.min.css">
 
-
         <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script src="//cdn.datatables.net/1.10.3/js/jquery.dataTables.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
 
@@ -27,6 +25,7 @@
         <script type="text/javascript" src="js/jasny-bootstrap.min.js"></script>
         <link href="css/jasny-bootstrap.min.css" rel="stylesheet">
 
+        <!-- pretty date range select -->
         <link rel="stylesheet" href="css/bootstrap-datepicker3.min.css">
         <script type="text/javascript" src="js/bootstrap-datepicker.min.js"></script>
 
