--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                 <div class="span12">
 
-                    <div class="pull-right">
+                    <div class="pull-right date-selectors">
                         <form class="form-inline">
                             <div class="form-group">
                                 <label for="exampleInputName2">From: </label>
