--- a/index.html
+++ b/index.html
@@ -57,11 +57,16 @@
                     </div>
                 </div>
 
-
                 <div class="span12">
 
                     <div class="pull-right date-selectors">
                         <form class="form-inline">
+                            <div class="form-group">
+                                <label for="exampleInputName2">Class: </label>
+                                <select id="class_select" class="form-control">
+                                  <option value="">All Classes</option>
+                                </select>
+                            </div>                        
                             <div class="form-group">
                                 <label for="exampleInputName2">From: </label>
                                 <input class="form-control datepicker" id="mindate">
@@ -81,6 +86,7 @@
                                 <th>Status</th>
                                 <th>Responses</th>
                                 <th></th>
+                                <th>Classes</th>
                             </tr>
                         </thead>
 
