add author column

--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
                         <thead>
                                 <th>Title</th>
                                 <th>Created</th>
+                                <th>Authors</th>
                                 <th>Status</th>
-                                <th>Responses</th>
+                                <th>Resp</th>
                                 <th></th>
                                 <th>Classes</th>
                             </tr>
