--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                                   <option value="">All Classes</option>
                                 </select>
                             </div>                        
-                            <div class="form-group">
-                                <label for="exampleInputName2">From: </label>
-                                <input class="form-control datepicker" id="mindate">
+                            <div class="form-group" style="margin-left: 10px;">
+                                <label for="exampleInputName2"><span class="glyphicon glyphicon-calendar"></span></label>
+                                <input class="form-control datepicker" id="mindate" placeholder="From">
                             </div>
                             <div class="form-group">
-                                <label for="exampleInputEmail2">To: </label>
-                                <input class="form-control datepicker" id="maxdate">
+                                <label for="exampleInputEmail2"></label>
+                                <input class="form-control datepicker" id="maxdate" placeholder="To">
                             </div>
                             <!--<button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-refresh"></span> Reload</button>-->
                         </form>            
