add a calendar icon

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                 <input class="form-control datepicker" id="mindate" placeholder="From">
                             </div>
                             <div class="form-group">
-                                <label for="exampleInputEmail2"></label>
+                                <label for="exampleInputEmail2"><span class="glyphicon glyphicon-calendar"></span></label>
                                 <input class="form-control datepicker" id="maxdate" placeholder="To">
                             </div>
                             <!--<button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-refresh"></span> Reload</button>-->
