hide redundant label

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div class="pull-right date-selectors">
                         <form class="form-inline">
                             <div class="form-group">
-                                <label for="exampleInputName2">Class: </label>
+                                <!-- <label for="exampleInputName2">Class: </label> -->
                                 <select id="class_select" class="form-control">
                                   <option value="">All Classes</option>
                                 </select>
