--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
                     <div class="pull-right date-selectors">
                         <form class="form-inline">
                             <div class="form-group">
-                                <!-- <label for="exampleInputName2">Class: </label> -->
+                                <label for="class_select"><span class="glyphicon glyphicon-user"></span> </label>
                                 <select id="class_select" class="form-control">
                                   <option value="">All Classes</option>
                                 </select>
                             </div>                        
                             <div class="form-group" style="margin-left: 15px;">
-                                <label for="exampleInputName2"><span class="glyphicon glyphicon-calendar"></span></label>
+                                <label for="mindate"><span class="glyphicon glyphicon-calendar"></span></label>
                                 <input class="form-control datepicker" id="mindate" placeholder="From">
                             </div>
                             <div class="form-group" style="margin-left: 5px;">
-                                <label for="exampleInputEmail2"><span class="glyphicon glyphicon-calendar"></span></label>
+                                <label for="maxdate"><span class="glyphicon glyphicon-calendar"></span></label>
                                 <input class="form-control datepicker" id="maxdate" placeholder="To">
                             </div>
                             <!--<button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-refresh"></span> Reload</button>-->
