show shared responses

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 <th>Created</th>
                                 <th>Authors</th>
                                 <th>Status</th>
-                                <th>Resp</th>
+                                <th>Shared</th>
                                 <th></th>
                                 <th>Classes</th>
                             </tr>
