--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                                 <th>Authors</th>
                                 <th>Status</th>
                                 <th>Shared</th>
+                                <th>Total</th>
                                 <th></th>
                                 <th>Classes</th>
                             </tr>
