add editable field to modal

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <select id="class_select" class="form-control">
                                   <option value="">All Classes</option>
                                 </select>
-                            </div>                        
+                            </div>
                             <div class="form-group" style="margin-left: 15px;">
                                 <label for="mindate"><span class="glyphicon glyphicon-calendar"></span></label>
                                 <input class="form-control datepicker" id="mindate" placeholder="From">
@@ -76,8 +76,8 @@
                                 <input class="form-control datepicker" id="maxdate" placeholder="To">
                             </div>
                             <!--<button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-refresh"></span> Reload</button>-->
-                        </form>            
-                    </div>                    
+                        </form>
+                    </div>
 
                     <table id="campaigntable" class="table">
                         <thead>
@@ -155,12 +155,19 @@
                     <div class="col-sm-4">
                       <input id="campaign_running" type="checkbox">
                     </div>
- 
+                  </div>
 
-                    <label for="campaign_state" class="col-sm-2 control-label">Sharing</label>
+                  <div class="form-group">
+                    <label for="campaign_privacy" class="col-sm-2 control-label">Sharing</label>
                     <div class="col-sm-4">
                       <input id="campaign_privacy" type="checkbox">
                     </div>
+
+                    <label for="campaign_editable" class="col-sm-2 control-label">Editable</label>
+                    <div class="col-sm-4">
+                      <input id="campaign_editable" type="checkbox">
+                    </div>
+
                   </div>
 
 
