hide mobilize stuff

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                       <input id="campaign_privacy" type="checkbox">
                     </div>
 
-                    <label for="campaign_editable" class="col-sm-2 control-label">Editable</label>
+                    <label for="campaign_editable" class="nomobilize col-sm-2 control-label">Editable</label>
                     <div class="col-sm-4">
                       <input id="campaign_editable" type="checkbox">
                     </div>
