--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="row">
 
                 <div class="span12 page-header">
-                    <a href="../author" id="new_campaign_button" class="pull-right btn btn-primary"><span class="glyphicon glyphicon-file"></span> Create New Campaign</a>
+                    <a href="../author/" id="new_campaign_button" class="pull-right btn btn-primary"><span class="glyphicon glyphicon-file"></span> Create New Campaign</a>
 
                     <!--
                       <h1>Campaign Manager</h1>
